<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_Activity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightgrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/whatsapp_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icons8_whatsapp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt2"
            android:background="@color/white"
            android:padding="8dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt3"
            android:background="@color/white"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:layout_gravity="right"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icons8_google"
            android:text="@string/btn2"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fb_color"
            android:drawableLeft="@drawable/icons8_facebook"
            android:text="@string/btn3" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>


</LinearLayout>