<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/arrow_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backArrow"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:srcCompat="@drawable/circle"
            android:src="@drawable/users_avatar_svgrepo_com"/>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="-42dp"
            android:src="@drawable/add_circle"
            app:tint="#2841C8"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_image"
            tools:ignore="ObsoleteLayoutParam">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text8"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/edt4"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginTop="23dp"
                tools:ignore="Autofill"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_image"
            tools:ignore="ObsoleteLayoutParam">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text9"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/edt5"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginTop="13dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:text="@string/btn5"
            android:layout_gravity="right"
            android:background="@drawable/btn_bg"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/linear_layout_bg"
        android:padding="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/text10"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableLeftCompat="@drawable/lock" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/text11"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableLeftCompat="@drawable/about" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/text12"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableLeftCompat="@drawable/users2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/text13"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableLeftCompat="@drawable/notification"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/text14"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/help"
            app:drawableTint="@color/colorPrimary" />

    </LinearLayout>
</RelativeLayout>
